--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pontos Turisticos Recife - PE</title>
 </head>
+    <!-- Cabeçalho -->
     <header>
         <h1>Macro Zero</h1>
         <nav>
@@ -15,6 +16,7 @@
         </nav>
     </header>
 <body>
+    <!-- Conteúdo -->
     <img src="https://imgmd.net/images/c_limit%2Cw_1200/v1/guia/1684247/recife-108-c.jpg"/>
     <h2>História</h2> 
     <p>O Marco Zero, na Praça Rio Branco, é conhecido como local de fundação da cidade do Recife e também como ponto inicial de contagem das distâncias calculadas a partir da cidade. O lugar é um dos pontos mais importantes na capital Pernambucana, pois é também uma região de forte movimento durante o Carnaval. 
@@ -48,6 +50,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQikYwMB99gaGEy4pIRPAe0Y3DpeXuTrGxr0Q&usqp=CAU" width="300" height="200" alt="Navio no mar"/><br>
         Algumas empresas de cruzeiros montam roteiros de viagem que incluem a capital pernambucana como ponto de parada. O tempo em terra varia de acordo com o cruzeiro contratado, mas, como costuma ser um tempo curto dedicado às cidades de desembarque, essa não é uma opção tão atrativa para conhecer Recife de forma detalhada. </P>
 </body>
+        <!-- Rodapé -->
 <footer>
     <h2>Pontos Turisticos</h2>
     <h3>Marco Zero</h3>
