--- a/marco zero/index.html
+++ b/marco zero/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../style.css" rel="stylesheet" />
     <title>Pontos Turisticos Recife - PE</title>
 </head>
 <body>
     <!-- Cabeçalho -->
     <header>
         <h1>Macro Zero</h1>
-        <nav>
+        <nav class="cabecalho">
             <ul>
                 <li>História</li>
                 <li>Como chegar</li>
             </ul>
         </nav>
-        <nav>
+        <nav class="tag-nav">
             <h2>Conheça também</h2>
             <ul>
                 <li><a href="../Torre Malakoff/index.html">Torre Malakoff</a></li>
